--- a/product-card.css
+++ b/product-card.css
@@ -6,8 +6,12 @@
   -webkit-border-radius: 5px;
   border: solid 1px #f6f6f6;
   box-shadow: 0px 0px 24px #d5d5d5;
-  margin: 40px auto;;
-  position: relative;
+  margin: 40px auto;
+  position: absolute;
+  top: 40px;
+  left: 0px;
+  right: 0px;
+  background: #fff;
   overflow: hidden;
   font-family: 'Open Sans', sans-serif;
   display: none;
@@ -30,8 +34,14 @@
 }
 #summaryTitle {
   font-weight: bold;
-  color: #cd040b;
+  color: #000;
   font-size: 18px;
+}
+span.tsLabel {
+    display: inline-block;
+    padding-right: 5px;
+    color: #cd040b;
+    font-weight: 600;
 }
 #verizonPhoneDetail {
   box-sizing: border-box;
@@ -71,14 +81,16 @@
   box-sizing: border-box;
   padding: 50px 50px 50px 0px;
 }
-#summaryList {
-  list-style-type: square;
-  margin: 20px 0px 20px 0px;
+ul#summaryList {
+    list-style: square;
+    margin: 20px 0px 20px 20px;
+    padding: 0px;
 }
 #summaryList li {
-  font-size: 15px;
-  margin-bottom: 5px;
-  line-height: 22px;
+    font-size: 14px;
+    margin-bottom: 8px;
+    line-height: 22px;
+    list-style: square;
 }
 #phonePriceDetail {
   font-size: 15px;
@@ -128,4 +140,16 @@ img#loading-img {
     width: 150px;
     display: block;
     margin: 20px 100px;
+}
+#moduleBackground {
+    display: none;
+    background: #f8f8f8;
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 1000;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
 }
