--- a/product-card.css
+++ b/product-card.css
@@ -7,7 +7,7 @@
   border: solid 1px #f6f6f6;
   box-shadow: 0px 0px 24px #d5d5d5;
   margin: 40px auto;
-  position: absolute;
+  position: fixed;
   top: 40px;
   left: 0px;
   right: 0px;
